# get-papers-list

./: README.md  pyproject.toml
src/get_papers_list/: cli.py
